--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <article>
                <header>
                   <span class="date">April 24, 2017</span>
-                  <h2><a href="https://github.com/Sameer3814/UltraMarathonProject">
+                  <h2><a href="./project_files/ultra_marathon_project.html">
                         Ultra Marathon Data Cleaning Project <br /> Using Python</a>
                   </h2>
                </header>
