--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
    <noscript>
       <link rel="stylesheet" href="assets/css/noscript.css" />
    </noscript>
+   <link rel="icon" href="images/favicon.ico" type="image/x-icon"/>
+   
 </head>
 
 <body class="is-preload">
